--- a/src/styles.css
+++ b/src/styles.css
@@ -1058,8 +1058,7 @@ img {
 
 #challenge-grid {
   display: grid;
-  /* TODO: Fix Issue, Tiles Need to be 2x2 Grid. Change only grid-template-columns */
-  grid-template-columns: none;
+  grid-template-columns: 50% 1fr;
   grid-auto-rows: 10rem;
   gap: 1rem;
   padding-top: 2rem;
